see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

31-Jan-2010 Hannes Papenberg
# Fixed group bug in JParameter - Thanks James Kennard
- Removing unused images from administrator, including the /images folder
# Fixing routing of JHTML::image()
# Fixed notice in com_content router
+ Added $path_only option to JHTML::image()
# Fixed bug in how com_languages saves the configuration options - Thanks Jonnathan!
# When module were renamed, the translation files weren't renamed, too.
# Fixed frontend translation files for modules
# Fixed plugin translation files
# Fixed custom module handling in module manager
# Fixed entries in #__extensions. This fixes a few bugs like the selection list for new modules in the module manager

30-Jan-2010 Hannes Papenberg
# Fixed translation of parameter labels in com_users
+ Added ability to add a category.xml file to a component to add parameters to com_categories
+ Added mod_weblinks Weblink Module - Thanks Amy Stephen!
# Finished making images overrideable

29-jan-2010 Jean-Marie Simonet
# Fixed Form field Spacer display

28-jan-2010 Ron Severdia
# Fixed CSS bug (missing CSS for new form element)

27-jan-2010 Christophe Demko
# Correcting bugs in JForm
^ Call to $object->toString() changed to (string)$object

26-Jan-2010 Mark Dexter
^ Add sprintf, alternative readmore to com_content, newsflash views (Angie Radtke)
# Fix bug so you can load a category (Robert Deutz)
# Bug fixes in com_search, newsflash (Angi Radtke)
^ Work on com_contact layouts (Elin Waring)
# Language strings work (Elin Waring)
# Make view and config labels consistent (Elin Waring)
# Fix bug in Save & New for non-article categories